--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -14,3 +14,13 @@ body,
 .el-cascader-menu{
   height: 204px;
 }
+.el-steps{
+  margin: 15px 0;
+}
+.el-step__title{
+  font-size: 13px
+}
+
+.ql-editor{
+  min-height: 300px
+}
